* fix - status @_tested is treated also as done
* feature - highlighting scenario estimation if this scenario isn't done
* fix - sorting group by context in business overview
* feature - grouping by role (@$_)
* fix - feature delete
* fix - correct parsing scenario|feature|background title when in title appear ':'
* fix - syntax highlighting ( Background:, Examples:, And, But )
* fix - &amp; &lt; &gt; reverse_html_escape
* fix - escaping ' and " for javascript strings
* fix sorting directory names in business overview page
* fix parsing estimation tag in scenarios navigator
* custom build of Mozilla SkyWriter (aka Bespin) with gherkin syntax highlighting
* editor page
** layout fixes
** scenario navigation
*** including tags and estimation
*** filtering functionality
* scenario on business view clickable - direct access to scenario in editor
* updating bespin ( new name SkyWriter ) to 0.9a2
* Statistics and Aggregate by Something Todo

0.1.3
* Statisctic- various
* Statistic - overal, component, iteration, developer, bucket, status
* Busines Overview - alphabetic sorting aggregated headers
* Busines Overview - progress bars on aggregated results (skipped on status aggregation)
* Percentage progress visualization by Rafał Bromirski from Selleo
* Fluid Layout by Rafał Bromirski from Selleo
* Layout Fixes ( browser compatibility ) by Rafał Bromirski from Selleo

0.1.2
* Editor - Basic ::: Scenario: Moving feature
* Editor - Basic ::: Scenario: Renaming feature
* Editor - Basic ::: Scenario: Deleting feature

0.1.1
* filter ::: Scenario: Filtering by negation (~)
* filter ::: Scenario: Filtering by group of tags ( using or - coma )
* fix take only tags from feature that are not present in scenario
* fix do not overwrite config git when using filter from business overview

0.1.0
* fix do not overwrite config[aggragate] when saving files
* align scenario to left (Github@Issue#6)
* removing simply http auth - messing up with devise
* changing default commit message